--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "three-d-portfolio-2025",
+  "name": "Kush Kumar",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -17,12 +17,16 @@
     "@react-three/postprocessing": "^3.0.4",
     "@tailwindcss/vite": "^4.0.14",
     "@types/three": "^0.174.0",
+    "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
     "gsap": "^3.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-responsive": "^10.0.1",
+    "react-router-dom": "^7.8.1",
+    "sonner": "^2.0.7",
     "tailwindcss": "^4.0.14",
     "three": "^0.174.0"
   },
